<resources>
    <string name="app_name" translatable="false">FamilyApp</string>
    <!-- Items Navigation Bar -->
    <string name="todo">ToDo</string>
    <string name="todo_share">TodoShare</string>
    <string name="shop_list">ShopList</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <!-- Snack bar -->
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <!-- Settings -->
    <string name="todo_settings">ToDoList settings</string>
    <string name="todo_share_settings">ShareTodoList settings</string>
    <string name="shop_list_settings">ShopList settings</string>
    <string name="chat_settings">Chat settings</string>
    <string name="login">Login account</string>
    <string name="logout">Logout</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="not_authorized">User is not authorized</string>
    <string name="sign_out_done">Sign out done</string>
    <string name="sign_in_done">Sign in done</string>
    <!-- Note -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="empty_filed">Empty field</string>
    <string name="add_new_note">Add new note</string>
    <string name="add_new_share_note">Add new share note</string>
    <string name="add_new_shop_list_item">Add new shop list item</string>
    <!-- Other action -->
    <string name="delete">Delete?</string>
    <string name="ok">OК</string>
    <string name="cancel">Cancel</string>
    <string name="update_date">Update date</string>
    <!-- Result -->
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="error_todo">Error Todo task</string>
    <!-- Firebase -->
    <string name="root_path_chat" translatable="false">chat</string>
    <string name="root_path_share_todo" translatable="false">shareTodo</string>
    <string name="root_path_shop_list" translatable="false">shopList</string>
    <!-- Other -->
    <string name="background">Background</string>
    <string name="shop_item">Shop item</string>
    <string name="message">Message</string>
    <string name="avatar">avatar</string>
</resources>